--- a/TS_LSTM_POWER_v1.ipynb
+++ b/TS_LSTM_POWER_v1.ipynb
@@ -34,7 +34,7 @@
    ]
   },
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -77,6 +77,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Global_active_power</th>\n      <th>Global_reactive_power</th>\n      <th>Voltage</th>\n      <th>Global_intensity</th>\n      <th>Sub_metering_1</th>\n      <th>Sub_metering_2</th>\n      <th>Sub_metering_3</th>\n      <th>sub_metering_4</th>\n    </tr>\n    <tr>\n      <th>datetime</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2006-12-16</th>\n      <td>1209.176</td>\n      <td>34.922</td>\n      <td>93552.53</td>\n      <td>5180.8</td>\n      <td>0.0</td>\n      <td>546.0</td>\n      <td>4926.0</td>\n      <td>14680.933319</td>\n    </tr>\n    <tr>\n      <th>2006-12-17</th>\n      <td>3390.460</td>\n      <td>226.006</td>\n      <td>345725.32</td>\n      <td>14398.6</td>\n      <td>2033.0</td>\n      <td>4187.0</td>\n      <td>13341.0</td>\n      <td>36946.666732</td>\n    </tr>\n    <tr>\n      <th>2006-12-18</th>\n      <td>2203.826</td>\n      <td>161.792</td>\n      <td>347373.64</td>\n      <td>9247.2</td>\n      <td>1063.0</td>\n      <td>2621.0</td>\n      <td>14018.0</td>\n      <td>19028.433281</td>\n    </tr>\n    <tr>\n      <th>2006-12-19</th>\n      <td>1666.194</td>\n      <td>150.942</td>\n      <td>348479.01</td>\n      <td>7094.0</td>\n      <td>839.0</td>\n      <td>7602.0</td>\n      <td>6197.0</td>\n      <td>13131.900043</td>\n    </tr>\n    <tr>\n      <th>2006-12-20</th>\n      <td>2225.748</td>\n      <td>160.998</td>\n      <td>348923.61</td>\n      <td>9313.0</td>\n      <td>0.0</td>\n      <td>2648.0</td>\n      <td>14063.0</td>\n      <td>20384.800011</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "            Global_active_power  Global_reactive_power    Voltage  \\\ndatetime                                                            \n2006-12-16             1209.176                 34.922   93552.53   \n2006-12-17             3390.460                226.006  345725.32   \n2006-12-18             2203.826                161.792  347373.64   \n2006-12-19             1666.194                150.942  348479.01   \n2006-12-20             2225.748                160.998  348923.61   \n\n            Global_intensity  Sub_metering_1  Sub_metering_2  Sub_metering_3  \\\ndatetime                                                                       \n2006-12-16            5180.8             0.0           546.0          4926.0   \n2006-12-17           14398.6          2033.0          4187.0         13341.0   \n2006-12-18            9247.2          1063.0          2621.0         14018.0   \n2006-12-19            7094.0           839.0          7602.0          6197.0   \n2006-12-20            9313.0             0.0          2648.0         14063.0   \n\n            sub_metering_4  \ndatetime                    \n2006-12-16    14680.933319  \n2006-12-17    36946.666732  \n2006-12-18    19028.433281  \n2006-12-19    13131.900043  \n2006-12-20    20384.800011  "
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(1442, 8)"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.values.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -89,6 +126,78 @@
     "\ttrain = array(split(train, len(train)/7))\n",
     "\ttest = array(split(test, len(test)/7))\n",
     "\treturn train, test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, test = split_dataset(dataset.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[[3.39046000e+03, 2.26006000e+02, 3.45725320e+05, ...,\n         4.18700000e+03, 1.33410000e+04, 3.69466667e+04],\n        [2.20382600e+03, 1.61792000e+02, 3.47373640e+05, ...,\n         2.62100000e+03, 1.40180000e+04, 1.90284333e+04],\n        [1.66619400e+03, 1.50942000e+02, 3.48479010e+05, ...,\n         7.60200000e+03, 6.19700000e+03, 1.31319000e+04],\n        ...,\n        [1.72328800e+03, 1.44434000e+02, 3.47096410e+05, ...,\n         2.69200000e+03, 1.04560000e+04, 1.38084667e+04],\n        [2.34133800e+03, 1.86906000e+02, 3.47305750e+05, ...,\n         3.50000000e+02, 1.11310000e+04, 2.43903000e+04],\n        [4.77338600e+03, 2.21470000e+02, 3.45795950e+05, ...,\n         4.25000000e+02, 1.47260000e+04, 6.17364334e+04]],\n\n       [[2.55001200e+03, 1.49900000e+02, 3.48029910e+05, ...,\n         5.08200000e+03, 6.89100000e+03, 2.88242000e+04],\n        [2.74312000e+03, 2.40280000e+02, 3.50495900e+05, ...,\n         1.96200000e+03, 5.79500000e+03, 3.13416666e+04],\n        [3.93411000e+03, 1.65102000e+02, 3.47940630e+05, ...,\n         2.53300000e+03, 1.49790000e+04, 4.69705001e+04],\n        ...,\n        [2.07263800e+03, 2.08876000e+02, 3.50306400e+05, ...,\n         4.41900000e+03, 9.17600000e+03, 1.87419666e+04],\n        [3.17439200e+03, 1.96394000e+02, 3.46854680e+05, ...,\n         5.16200000e+03, 1.13290000e+04, 3.51635333e+04],\n        [2.79610800e+03, 3.12142000e+02, 3.46377150e+05, ...,\n         7.89300000e+03, 1.25160000e+04, 2.31208000e+04]],\n\n       [[3.49419600e+03, 1.50852000e+02, 3.45451070e+05, ...,\n         3.47000000e+02, 6.50200000e+03, 5.13876000e+04],\n        [2.74900400e+03, 1.48166000e+02, 3.45785730e+05, ...,\n         3.52000000e+02, 5.88000000e+03, 3.95847333e+04],\n        [1.26923600e+03, 1.90342000e+02, 3.48399040e+05, ...,\n         3.48000000e+02, 6.56200000e+03, 1.42439333e+04],\n        ...,\n        [3.25941200e+03, 2.02302000e+02, 3.45240430e+05, ...,\n         7.59700000e+03, 1.08960000e+04, 3.47795333e+04],\n        [2.71336400e+03, 1.73154000e+02, 3.46313900e+05, ...,\n         3.79000000e+02, 7.60200000e+03, 3.57587334e+04],\n        [1.50837800e+03, 1.92188000e+02, 3.45129200e+05, ...,\n         4.02000000e+02, 5.67800000e+03, 1.77236333e+04]],\n\n       ...,\n\n       [[2.13881400e+03, 2.22190000e+02, 3.52076540e+05, ...,\n         4.17000000e+02, 1.31780000e+04, 1.80679000e+04],\n        [1.79486200e+03, 1.51982000e+02, 3.54454290e+05, ...,\n         2.28000000e+03, 1.07420000e+04, 1.58023667e+04],\n        [1.94011600e+03, 1.62344000e+02, 3.54302180e+05, ...,\n         3.92000000e+02, 1.40840000e+04, 1.67482667e+04],\n        ...,\n        [1.71718200e+03, 1.48970000e+02, 3.55527550e+05, ...,\n         3.08000000e+02, 1.43950000e+04, 1.39167000e+04],\n        [1.74470600e+03, 1.60418000e+02, 3.55096590e+05, ...,\n         3.04000000e+02, 1.14660000e+04, 1.61134333e+04],\n        [2.20433400e+03, 1.37608000e+02, 3.54145740e+05, ...,\n         2.66200000e+03, 1.36810000e+04, 1.92309000e+04]],\n\n       [[1.14416600e+03, 1.22100000e+02, 3.56306410e+05, ...,\n         3.13000000e+02, 7.79500000e+03, 9.72443338e+03],\n        [2.03496600e+03, 1.71948000e+02, 3.54829270e+05, ...,\n         2.82000000e+02, 1.14730000e+04, 1.88681000e+04],\n        [1.88802200e+03, 1.53362000e+02, 3.53863350e+05, ...,\n         2.85000000e+02, 1.58290000e+04, 1.53530334e+04],\n        ...,\n        [2.90589400e+03, 2.03660000e+02, 3.54002570e+05, ...,\n         5.57500000e+03, 1.51980000e+04, 2.24745666e+04],\n        [2.12764800e+03, 1.92384000e+02, 3.50767150e+05, ...,\n         3.89500000e+03, 1.42880000e+04, 1.39067999e+04],\n        [2.18361800e+03, 1.60884000e+02, 3.49150630e+05, ...,\n         4.29400000e+03, 1.60470000e+04, 1.48666333e+04]],\n\n       [[2.19545200e+03, 2.07164000e+02, 3.49439100e+05, ...,\n         3.18000000e+02, 1.24500000e+04, 1.96048666e+04],\n        [2.09409800e+03, 1.81668000e+02, 3.51039760e+05, ...,\n         2.06300000e+03, 1.49340000e+04, 1.57296333e+04],\n        [2.04796800e+03, 2.42050000e+02, 3.50183540e+05, ...,\n         3.46000000e+02, 1.02050000e+04, 2.23218000e+04],\n        ...,\n        [2.21189200e+03, 1.86612000e+02, 3.46980700e+05, ...,\n         3.87000000e+02, 1.94090000e+04, 1.70688667e+04],\n        [1.22425200e+03, 1.65336000e+02, 3.49294640e+05, ...,\n         3.27000000e+02, 3.55800000e+03, 1.42152000e+04],\n        [1.30926800e+03, 1.99546000e+02, 3.52332840e+05, ...,\n         2.98000000e+02, 6.42500000e+03, 1.42971334e+04]]])"
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(159, 7, 8)"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(46, 7, 8)"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, test = split_dataset(dataset.values)"
    ]
   },
   {
